
public struct UIName
{
    public const string ControlKeyUI = "ControlKeyUI";
    public const string GoDungeonUI = "GoDungeonUI";
    public const string PlayerStatusUI = "PlayerStatusUI";
    public const string ReforgeUI = "ReforgeUI";
    public const string RestartUI = "RestartUI";
    public const string RestaurantUI = "RestaurantUI";
    public const string ResultUI = "ResultUI";
    public const string SettingUI = "SettingUI";
    public const string ShopUI = "ShopUI";
    public const string InventoryUI = "InventoryUI";
}

public struct SceneName
{
    public const string TitleScene = "TitleScene";
    public const string LoadingScene = "LoadingScene";
    public const string VillageScene = "KGM_TestVillage";
    public const string Field = "KGM";
    public const string TycoonScene = "TycoonScene";
    public const string TutorialScene = "KGM_Tutorial";
}

public struct TagName
{
    public const string Respawn = "Respawn";
    public const string Player = "Player";
    public const string CookedFood = "CookedFood";
    public const string Enemy = "Enemy";
    public const string Item = "Item";
    public const string Door = "Door";
    public const string AI = "AI";
    public const string PotionShop = "PotionShop";
    public const string Enhancement = "Enhancement";
    public const string RealDoor = "RealDoor";
}

public struct LayerName
{
    public const string UI = "UI";
    public const string Ground = "Ground";
    public const string Item = "Item";
    public const string NpcInteract = "NpcInteract";
    public const string Player = "Player";
    public const string Enemy = "Enemy";
    public const string Title = "Title";
}

public struct BGMResourceName
{
    public const string TitleBGM = "TitleBGM";
    public const string VillageBGM = "VillageBGM";
    public const string FirstFieldBGM = "FirstFieldBGM";
    public const string SecondFieldBGM = "SecondFieldBGM";
    public const string ThirdFieldBGM = "ThirdFieldBGM";
    public const string FourthFieldBGM = "FourthFieldBGM";
    public const string TycoonBGM = "TycoonBGM";
}
public struct SFXResourceName
{
    public const string TitleBGM = "TitleBGM";
}

public struct PoolingObjectName
{
    public const string Customer = "Customer";
}

public struct ResourcePath
{
    public const string JsonLoadPath = "Assets/Resources/JSON/";
}

public struct JsonDataName
{
    public const string PlayerData = "PlayerData";
    public const string PlayerSkillData = "PlayerSkillData";
    public const string PlayerLevelData = "LevelData";
}

public struct AnimationParameterName
{
    public const string TycoonGetFood = "GetFood";
    public const string TycoonAngry = "Angry";
    public const string TycoonIsWalk = "IsWalk";
    public const string TycoonIsEat = "IsEat";
    public const string TycoonIsIdle= "IsIdle";
}

